# wss-stock

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
cliente/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
cliente/migrations/: 0001_initial.py  0002_alter_cliente_data_cadastro.py  0003_alter_cliente_data_cadastro.py  0004_alter_cliente_cpf_alter_cliente_data_cadastro_and_more.py  0005_alter_cliente_data_cadastro_alter_cliente_telefone_1.py  0006_alter_cliente_data_cadastro.py  0007_alter_cliente_cpf_alter_cliente_data_cadastro_and_more.py  0008_alter_cliente_data_cadastro.py  0009_alter_cliente_data_cadastro.py  0010_alter_cliente_data_cadastro.py  0011_alter_cliente_data_cadastro.py  0012_alter_cliente_data_cadastro.py  0013_alter_cliente_data_cadastro.py  0014_alter_cliente_data_cadastro.py  0015_alter_cliente_data_cadastro.py  0016_alter_cliente_data_cadastro.py  0017_alter_cliente_data_cadastro.py  0018_alter_cliente_data_cadastro.py  0019_alter_cliente_data_cadastro.py  0020_alter_cliente_data_cadastro.py  0021_alter_cliente_data_cadastro.py  0022_alter_cliente_data_cadastro.py  0023_alter_cliente_data_cadastro.py  0024_alter_cliente_data_cadastro.py  0025_alter_cliente_data_cadastro.py  (+4 more)
orcamento/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
produto/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
setup/: settings.py  urls.py
templates/: cadastrar_orcamento_cliente.html
venda/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
(+143 files in other folders)
